contrib/manifests/002-manifest.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: clusterlocationwebhook
  namespace: clusterlocationwebhook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cluster-location
  template:
    metadata:
      labels:
        app: cluster-location
        k8s.osp.tech/no-cluster-location: ""
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - cluster-location
            topologyKey: failure-domain.beta.kubernetes.io/zone
      containers:
      - name: cluster-location
        image: ocadotechnology/cluster-location-webhook:does-not-exist
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTPS
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
        volumeMounts:
        - name: certs
          mountPath: /certs
      serviceAccountName: clusterlocationwebhook-ca-sync
      volumes:
      - name: certs
        secret:
          secretName: clusterlocationwebhook-tls
---
apiVersion: v1
kind: Service
metadata:
  name: clusterlocationwebhook
  namespace: clusterlocationwebhook
spec:
  selector:
    app: cluster-location
  ports:
  - name: https
    port: 443
    targetPort: http
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: clusterlocationwebhook
  labels:
    app: clusterlocationwebhook
    appId: clusterlocationwebhook
webhooks:
- name: clusterlocationwebhook.k8s.osp.tech
  rules:
  - apiGroups:
    - "*"
    apiVersions:
    - "*"
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  failurePolicy: Ignore
  clientConfig:
    service:
      name: clusterlocationwebhook
      namespace: clusterlocationwebhook
      path: /mutate
